--- a/css/sb_validate.css
+++ b/css/sb_validate.css
@@ -14,3 +14,15 @@
 
 /* Validation Styles */
 
+input:not([type="radio"]):focus {
+   background-color: rgb(255, 218, 165);
+}
+
+input:not([type="radio"]):focus:valid {
+   background: rgb(215, 255, 215) url(../image/sb_valid.png) right no-repeat;
+}
+
+input:not([type="radio"]):focus:invalid {
+
+   background:rgb(255, 245, 215) url(../image/sb_invalid.png) right no-repeat;
+}
